--- a/scss/main.scss
+++ b/scss/main.scss
@@ -187,6 +187,7 @@ $yellow: #fdb44b;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin-top: 30px;
 
         .contact-item {
           display: flex;
