--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 30px;
 }
 .container .main .map .contact-us .contact-item {
   display: flex;
